<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:padding="4dip"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Chronometer android:id="@+id/chronometer"
        android:format="@string/chronometer_initial_format"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:paddingBottom="30dip"
        android:paddingTop="30dip"
        android:textSize="35sp"
        />

    <Button
        android:id="@+id/start"
        style="@style/RoboButtonTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chronometer_start"
        android:background="@drawable/buttonshape"
        android:layout_marginBottom="20dp"

        >
        <requestFocus />
    </Button>

    <Button android:id="@+id/stop"
        style="@style/RoboButtonTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chronometer_stop"
        android:background="@drawable/buttonshape"
        android:layout_marginBottom="20dp"


        >
    </Button>

    <Button android:id="@+id/reset"
        style="@style/RoboButtonTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chronometer_reset"
        android:background="@drawable/buttonshape"
        android:layout_marginBottom="50dp"


        >
    </Button>

    <Button android:id="@+id/go_back"
        style="@style/RoboButtonTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        android:background="@drawable/buttonshape"
        android:layout_marginBottom="30dp"

        >
    </Button>

</LinearLayout>