<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:nimbuzz="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="4dip">

        <TextView
            android:id="@+id/textView_notifyMe_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            tools:text="@string/text_notifyMe_info" />

        <com.gpstracker.CustomTextView
            android:id="@+id/go_to_app"
            style="@style/RoboButtonTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@drawable/buttonshape"
            android:gravity="center"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:text="@string/go_to_app"
            app:shadowColors="@color/button_shadow_color_green_selector" />

        <com.gpstracker.CustomTextView
            android:id="@+id/go_to_droid"
            style="@style/RoboButtonTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@drawable/buttonshape"
            android:gravity="center"
            android:text="@string/go_to_droid"
            app:shadowColors="@color/button_shadow_color_green_selector" />


    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
